[tool.poetry]
name = "genotools-api"
version = "0.1.0"
description = ""
authors = ["dvitale199 <d.vitale199@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
the-real-genotools = "^1.2.4"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
